# indoor-navigation-by-visual-based-positioning

./: .gitignore  Dockerfile  Dockerfile.motor  ROS2 Camera MVP Guide.md  docker-compose.yml
ws/src/picarx_camera/: package.xml  setup.cfg  setup.py
ws/src/picarx_camera/picarx_camera/: camera_node.py
ws/src/picarx_motor/: package.xml  setup.cfg  setup.py
ws/src/picarx_motor/picarx_motor/: motor_controller_node.py
